feat: add basic pictures

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       body {
         font: 16px Helvetica, Sans-Serif;
         line-height: 24px;
-        background: url(images/noise.jpg);
+        background: url(img/noise.jpg);
       }
       .clear {
         clear: both;
@@ -99,9 +99,9 @@
 
   <body>
     <div id="page-wrap">
-      <img src="images/cthulu.png" alt="Photo of Cthulu" id="pic" />
+      <img src="img/cthulu.png" alt="Photo of Cthulu" id="pic" />
 
-      <div id="contact-info" class="vcard">
+      <section id="contact-info" class="vcard">
         <!-- Microformats! -->
 
         <h1 class="fn">C'thulhu</h1>
@@ -113,7 +113,7 @@
             >greatoldone@lovecraft.com</a
           >
         </p>
-      </div>
+      </section>
 
       <div id="objective">
         <p>
